--- a/Views/Home/Portfolio.cshtml
+++ b/Views/Home/Portfolio.cshtml
@@ -1,5 +1,70 @@
 
-<h1> @ViewData["Title"]</h1> 
-<h2>@ViewData["Message"]</h2>
-<h3> Portfolio page</h3>
-<p> Hello, is this working now</p>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Assessment2</title>
+        <link rel="stylesheet" href="css/portfolio.css" type="text/css" >   
+    </head>
+    <body>
+        <!-- Content begins here -->
+        <h1> Portfolio </h1>
+        <div>
+        <img class="thickborder" src="placeholders/placeholder.jpg" alt="placeholder" >
+        <blockquote>There are two means of refuge from the miseries of 
+        life: music and cats.  </blockquote>
+        <p>Albert Schweitzer </p>
+        </div>
+        
+        <div>
+        <img class="thickborder" src="images/cat1.jpeg" alt="cat 1" >
+        <blockquote>Time spent with cats is never wasted.  </blockquote>
+        <p>Sigmund Freud </p>
+        </div>
+        
+        <div>
+        <img class="thickborder" src="images/cat2.jpeg" alt="cat 2">
+        <blockquote>No matter how much cats fight, there always 
+        seem to be plenty of kittens. </blockquote>
+        <p>Abraham Lincoln </p>
+        </div>
+
+        <div>
+        <img class="thickborder" src="images/cat3.jpeg" alt="cat 3">
+        <blockquote>A countryman between two lawyers is like a fish 
+        between two cats. </blockquote>
+        <p>Benjamin Franklin </p>
+        </div>
+        
+        <div>
+        <img class="thickborder" src="images/cat4.jpeg" alt="cat 4">
+        <blockquote> Just watching my cats can make me happy. </blockquote>
+        <p>Paula Cole</p>
+        </div>
+        
+       <div>
+        <img class="thickborder" src="images/cat5.jpeg" alt="cat 5">
+        <blockquote>In ancient times cats were worshipped as gods; 
+        they have not forgotten this. </blockquote>
+        <p>Terry Pratchett </p>
+       </div>  
+
+        <div>
+        <img class="thickborder" src="images/cat6.jpeg" alt="cat 6">
+        <blockquote>Cats seem to go on the principle that 
+        it never does any harm to ask for what you want. </blockquote>
+        <p>Joseph Wood Krutch </p>    
+        </div>
+        
+        <div>
+        <img class="thickborder" src="images/cat7.jpeg" alt="cat 7">
+        <blockquote>Authors like cats because they are such quiet, 
+        lovable, wise creatures, and cats like authors for the same reasons. </blockquote>
+        <p>Robertson Davies </p>
+        </div>
+        
+        <!-- Content ends here -->
+        <script src=""></script>
+    </body>
+</html>
