--- a/Views/Home/Portfolio.cshtml
+++ b/Views/Home/Portfolio.cshtml
@@ -5,20 +5,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Assessment2</title>
-        <link rel="stylesheet" href="css/portfolio.css" type="text/css" >   
+        <link rel="stylesheet" href="css/styles.css">   
     </head>
     <body>
         <!-- Content begins here -->
         <h1> Portfolio </h1>
         <div>
-        <img class="thickborder" src="placeholders/placeholder.jpg" alt="placeholder" >
+        <img class="thickborder" src="https://www.wpfreeware.com/wp-content/uploads/2014/09/placeholder-images.jpg" alt="placeholder" >
         <blockquote>There are two means of refuge from the miseries of 
         life: music and cats.  </blockquote>
         <p>Albert Schweitzer </p>
         </div>
         
         <div>
-        <img class="thickborder" src="images/cat1.jpeg" alt="cat 1" >
+        <img class="thickborder" src="images/placeholder.jpeg" alt="cat 1" >
         <blockquote>Time spent with cats is never wasted.  </blockquote>
         <p>Sigmund Freud </p>
         </div>
