--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 img {
     height : 200px;
-    width: 200px;
 }
 .thickborder {
 border: 4px solid #222;
@@ -8,8 +7,9 @@ box-sizing:border-box;
 }
 h1 {
 font-family: arial;
-font-size: 30px;
+font-size: 50px;
 color: #222; 
+text-align: center;
 }
 blockquote {
  border-left: 4px solid #888;
