--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,17 +1,37 @@
-﻿@{
-    ViewData["Title"] = "Contact";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+﻿<div class="container">
+    <div class="jumbotron jumbotron-sm" style="background-color:black;margin-top:2%;color:white;">
+        <div class="row">
+            <div class="col-sm-12 col-lg-12">
+                <h1 class="h2" style="margin-top:-2%">
+                    Contact Us
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="well">
+                <h3 style="line-height:20%;"><i class="fa fa-home fa-1x" style="line-height:6%;color:#339966"></i> Location:</h3>               
+                <p style="margin-top:6%;line-height:35%">221B Baker Street, Tauranga</p>
+                <br />
+                <br />
+                <h3 style="line-height:20%;"><i class="fa fa-envelope fa-1x" style="line-height:6%;color:#339966"></i> E-Mail:</h3>
+                <p style="margin-top:6%;line-height:35%">info@MakeupMe.com</p>
+                <br />
+                <br />
+                <h3 style="line-height:20%;"><i class="fa fa-user fa-1x" style="line-height:6%;color:#339966"></i> Twitter:</h3>
+                <p style="margin-top:6%;line-height:35%">http://twitter.com/MakeupMe</p>
+                <br />
+                <br />
+                <h3 style="line-height:20%;"><i class="fa fa-yelp fa-1x" style="line-height:6%;color:#339966"></i> Facebook:</h3>
+                <p style="margin-top:6%;line-height:35%">Facebook</p>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96690.80542089987!2d29.864461132544537!3d40.77109282810726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb4f66644bfb9d%3A0x82690ee7586b7eb9!2zxLB6bWl0LCBLb2NhZWxp!5e0!3m2!1str!2str!4v1480782606579" width="565" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
+       
