--- a/css/site.css
+++ b/css/site.css
@@ -33,3 +33,50 @@
         display: none;
     }
 }
+img {
+    height : 200px;
+}
+.thickborder {
+border: 4px solid #222;
+box-sizing:border-box;
+}
+h1 {
+font-family: arial;
+font-size: 50px;
+color: #222; 
+text-align: center;
+}
+blockquote {
+ border-left: 4px solid #888;
+ padding-left: 5px;
+ font-size: 20px;
+ color: #00008b;
+ max-width: 150px;
+}
+p {
+ text-align: right;
+ font-size: 16px;
+ color: #6a5acd;
+ padding: 3px;
+}
+div {
+border: 2px solid #222;
+float:left;
+margin: 5px;
+}
+@media (min-width: 768px) {
+h1{
+font-size: 50px
+}
+.container {
+max-width: 720px;
+}
+}
+@media (min-width: 992px) {
+h1{
+font-size: 70px
+}
+.container {
+max-width: 960px;
+}
+}
