updated blog page

--- a/Views/Home/Blog.cshtml
+++ b/Views/Home/Blog.cshtml
@@ -8,7 +8,7 @@
     
       <div class="row">
         <div class="col-sm-12">
-        	<h4>Understanding the Bootstrap Grid</h4>  
+        	<h4>Blog Post 4</h4>  
             <hr>
         </div>
         <div class="col-sm-2"><span class="label label-default label-arrow label-arrow-right pull-right">1 Hour Ago</span></div>
@@ -26,7 +26,7 @@
       <hr>
       <div class="row">
         <div class="col-sm-12">
-        	<h4>Why They Made Bootstrap Mobile-first <span class="label label-default label-arrow label-arrow-left">Yesterday</span></h4>  
+        	<h4>Blog Post 3 <span class="label label-default label-arrow label-arrow-left">Yesterday</span></h4>  
             <hr>
         </div>
         <div class="col-sm-2"><img src="//placehold.it/75x75" class="img-circle center-block"></div>
@@ -42,7 +42,7 @@
       <hr>
       <div class="row">
         <div class="col-sm-12">
-        	<h4>Understanding the Bootstrap Grid <span class="label label-default label-arrow label-arrow-left">2 Days Ago</span></h4>  
+        	<h4>Blog Post 2 <span class="label label-default label-arrow label-arrow-left">2 Days Ago</span></h4>  
             <hr>
         </div>
         <div class="col-sm-2"><img src="//placehold.it/75x75" class="img-circle center-block"></div>
@@ -60,7 +60,7 @@
       <hr>
       <div class="row">
         <div class="col-sm-12">
-        	<h4>Another Heading Here <span class="label label-default label-arrow label-arrow-left">4 Days Ago</span></h4>  
+        	<h4>Blog Post 1 <span class="label label-default label-arrow label-arrow-left">4 Days Ago</span></h4>  
             <hr>
         </div>
         <div class="col-sm-2"><img src="//placehold.it/75x75" class="img-circle center-block"></div>
