--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col-sm-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96690.80542089987!2d29.864461132544537!3d40.77109282810726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb4f66644bfb9d%3A0x82690ee7586b7eb9!2zxLB6bWl0LCBLb2NhZWxp!5e0!3m2!1str!2str!4v1480782606579" width="565" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25259.449247445275!2d176.1482937385469!3d-37.68607217977572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6ddbdcdb018c15%3A0xb80a04195671d856!2sToi+Ohomai+Institute+of+Technology+-+Bongard+Campus%2C+Tauranga!5e0!3m2!1sen!2snz!4v1506033683561" width="565" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
 </div>
