--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -14,7 +14,7 @@
         <div class="col-sm-6">
             <div class="well">
                 <h3 style="line-height:20%;"><i class="fa fa-home fa-1x" style="line-height:6%;color:#339966"></i> Location:</h3>               
-                <p style="margin-top:6%;line-height:35%">221B Baker Street, Tauranga</p>
+                <p style="margin-top:6%;line-height:35%">200Cameron Road, Tauranga</p>
                 <br />
                 <br />
                 <h3 style="line-height:20%;"><i class="fa fa-envelope fa-1x" style="line-height:6%;color:#339966"></i> E-Mail:</h3>
@@ -26,7 +26,7 @@
                 <br />
                 <br />
                 <h3 style="line-height:20%;"><i class="fa fa-yelp fa-1x" style="line-height:6%;color:#339966"></i> Facebook:</h3>
-                <p style="margin-top:6%;line-height:35%">Facebook</p>
+                <p style="margin-top:6%;line-height:35%">Facebook.com/MakeupMe</p>
             </div>
         </div>
         <div class="col-sm-6">
